Changelog
----------

1.1 (unreleased)
^^^^^^^^^^^^^^^^

- Nothing changed yet.


1.0 (2013-01-27)
^^^^^^^^^^^^^^^^^^^

* Refactor travis-ci integration and tests.
  [cleberjsantos] 

* Add upgrade steps.
  [cleberjsantos]

* Refactor to integration of collective.js.galleria.
  [cleberjsantos]

* Fix FaceBook plugin.
  [cleberjsantos]


1.0rc1 (2012-09-07)
^^^^^^^^^^^^^^^^^^^

* Added toggle full screen.
  [cleberjsantos]

* Added FaceBook Plugins.
  [cleberjsantos]

* Galleria upgrade version to 1.2.8 and templates fixes.
  [cleberjsantos]

* Refactoring tests.
  [cleberjsantos]

* Corrected thumb and image generation.
  [cleberjsantos]

* Added Galleria template to new collection.
  [cleberjsantos]

* Upgrade Picasa, Flickr and History Plugins.
  [cleberjsantos]


1.0b4 (2012-06-21)
^^^^^^^^^^^^^^^^^^

* Added image crop and responsive options.
  [cleberjsantos]

* Refactored and optimized code.
  [cleberjsantos]

* Refactoring browser test cases.
  [aleGpereira]

* Fixed Title and Description data, modification of the method call.
  [cleberjsantos]

* Resolves (issue `#25`_).
  [cleberjsantos]

* Added template with ZPT macro.
  [cleberjsantos]

* Updated documentation.
  [cleberjsantos]

* Updated templates.
  [cleberjsantos]

* Some tests were fixed and some others, refactored.
  [hvelarde]

* Fixed package distribution and documentation.
  [hvelarde]


1.0b3 (2012-05-28)
^^^^^^^^^^^^^^^^^^

* Fixed NameError: name 'test' is not defined (issue `#17`_).
  [cleberjsantos]

* PEP 8.
  [hvelarde]

* Portuguese translation updated.
  [lepri]


1.0b2 (2012-05-19)
^^^^^^^^^^^^^^^^^^

* Fixed Picasa and Flickr plugins (issue `#11`_).
  [cleberjsantos]

* Added validation for Vimeo and DailyMotion (issue `#12`_).
  [cleberjsantos]

* Patch for bug in Picasa plugin (issue `#13`_).
  [cleberjsantos]

* Added tests.
  [aleGpereira]

* Updated i18n and Brazilian Portuguese translation.
  [hvelarde]


1.0b1 (2012-05-18)
^^^^^^^^^^^^^^^^^^

*  Initial release.
