@@ -1,11 +1,9 @@
 <?xml version="1.0"?>
-<object
-    name="portal_controlpanel"
-    xmlns:i18n="http://xml.zope.org/namespaces/i18n"
-    i18n:domain="sc.galleria.support"
-    purge="True">
-
-    <configlet action_id="galleria" remove="True" />
-
+<object name="portal_controlpanel" purge="False">
+  <configlet
+      title="Galleria"
+      action_id="galleria"
+      appId="sc.galleria.support"
+      remove="True">
+  </configlet>
 </object>
-
